# docs/swagger.json
@@ -17,6 +17,33 @@
     "host": "0.0.0.0:8080",
     "basePath": "/",
     "paths": {
+        "/api/v1/address/subscribe": {
+            "post": {
+                "description": "Subscribe and address to an observer for new inbound/outbound transactions in the latest block.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blocks"
+                ],
+                "summary": "Subscribe and address to an observer for new inbound/outbound transactions in the latest block.",
+                "parameters": [
+                    {
+                        "description": "Address",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.SubscribeAddress.request"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/block/current": {
             "get": {
                 "description": "Get current Ethereum block.",
@@ -56,6 +83,16 @@
                     }
                 ],
                 "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "handlers.SubscribeAddress.request": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                }
             }
         }
     }
