# pkg/handlers/routes.go
@@ -11,8 +11,15 @@ import (
 
 func registerHTTPRoutes(
 	config *configs.Config, muxer *mux.Router, handler *BlockHandler) *mux.Router {
-	muxer.HandleFunc("/api/v1/{address}/transactions", handler.GetBlockTransactionsPerAddress()).Methods("GET")
-	muxer.HandleFunc("/api/v1/block/current", handler.GetCurrentBlock()).Methods("GET")
+	muxer.HandleFunc(
+		"/api/v1/{address}/transactions",
+		handler.GetBlockTransactionsPerAddress()).Methods("GET")
+	muxer.HandleFunc(
+		"/api/v1/address/subscribe",
+		handler.SubscribeAddress()).Methods("POST")
+	muxer.HandleFunc(
+		"/api/v1/block/current",
+		handler.GetCurrentBlock()).Methods("GET")
 
 	swaggerJsonURL := fmt.Sprintf("http://%s:%d/swagger/doc.json", config.Host, config.Port)
 
